tests/ui/fail/async_token_prevents_buffer_replace.stderr
error[E0506]: cannot assign to `buffer` because it is borrowed
  --> tests/ui/fail/async_token_prevents_buffer_replace.rs:16:5
   |
12 |         BorrowedVideoFrame::try_from_uncompressed(&buffer, 16, 16, PixelFormat::BGRA, 30, 1)
   |                                                   ------- `buffer` is borrowed here
...
16 |     buffer = vec![1u8; 16 * 16 * 4];
   |     ^^^^^^ `buffer` is assigned to here but it was already borrowed
17 |     drop(token);
   |          ----- borrow later used here
   |
   = note: borrow occurs due to deref coercion to `[u8]`
note: deref defined here
  --> $RUST/alloc/src/vec/mod.rs
   |
   |     type Target = [T];
   |     ^^^^^^^^^^^
